--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 </head>
 
 <body>
-
+  <div class="dark-switch">
+    <i class="far fa-moon"></i>
+  </div>
   <div class="container d-flex justify-content-center">
-    <div class="giveaway shadow-lg my-4">
+    <div class="giveaway shadow-lg my-5">
       <div class="slider">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
